ViTables ChangeLog
==================
** November 13, 2009 **
Querying functionality has been moved from vtapp.py to queriesManager.py.

dataSheet.py module has been refactored. Circular references have been removed.

Fixed a bug in the Preferences dialog.
** November 10, 2009 **
Fixed a bug in the Preferences dialog.

** November 08, 2009 **
Fixed a bug in the tree of databases that was not apparent in PyQt <=4.4.4.

The path of the config. file on Unix systems now adheres to the Qt standards.

** September 25, 2009 **
Fixed a minor bug in the code for opening files via drag and drop.

** September 22, 2009 **
Last improvements in the documentation style applied to Windows platforms.

Fixed an annoyance in the creation of PDF documentation.

** September 21, 2009 **
The User's Guide has been updated (and its custom layer has been recovered).

** September 20, 2009 **
Fixed a compatibility problem XP/Vista in the Windows installer.

** September 19, 2009 **
Applied several minor simplifications to styles management code.

** September 18, 2009 **
Windows installer upgraded for the next release.

** September 15, 2009 **
Fixed some minor bugs.

Prepare things for the next release.

** August 24, 2009 **
Some icons have been updated.

The zoomCell module has been debugged and refactored.

** August 22, 2009 **
The plugins framework has been debugged and its usability has been improved.

The time_series plugin has been debugged and refactored.

** August 21, 2009 **
The examples directory has been reworked.

** August 20, 2009 **
A couple of modules have been sanitised (bad variable names changed).

** August 15, 2009 **
The docBrowser package has been reworked a little bit.

Splash screen has been updated.

** August 13, 2009 **
Icons have been updated. About ViTables dialog enhanced with a Thanks To page.

Fixed a bug introduced when the use of Qt resources was dropped.

** August 07, 2009 **
Makefile files and other unneeded stuff have been removed.
