@@ -1,6 +1,8 @@
 ViTables ChangeLog
 ==================
 ** November 13, 2009 **
+Plugins have been updated.
+
 Querying functionality has been moved from vtapp.py to queriesManager.py.
 
 dataSheet.py module has been refactored. Circular references have been removed.
